@@ -1,8 +1,21 @@
 package com.j10d207.tripeer.noti.service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
+import com.j10d207.tripeer.exception.CustomException;
+import com.j10d207.tripeer.exception.ErrorCode;
+import com.j10d207.tripeer.noti.db.entity.FirebaseToken;
+import com.j10d207.tripeer.noti.db.firebase.MessageType;
+import com.j10d207.tripeer.noti.dto.NotificationDto;
+import com.j10d207.tripeer.noti.dto.NotificationMap;
+import com.j10d207.tripeer.noti.dto.Token;
+import com.j10d207.tripeer.noti.dto.TokenMap;
+import com.j10d207.tripeer.noti.mapper.FirebaseTokenMapper;
+import com.j10d207.tripeer.noti.mapper.NotificationMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -37,45 +50,82 @@ public class NotificationTaskService {
 
 
 	@Transactional
-	public void updateStateToSent(NotificationTask task) {
-		if (!em.contains(task)) task = em.merge(task);
+	public void updateStateToSent(final Long taskId) {
+		final Optional<NotificationTask> optionalTask = notificationTaskRepository.findById(taskId);
+		final NotificationTask task = optionalTask.orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_NOTI_TASK));
 		task.toSENT();
 	}
 
 	@Transactional
-	public List<NotificationTask> getScheduleNeedTasksForPlan(
-		final Map<Long, List<String>> tokenMap,
-		final Map<Long, Notification> notificationMap
+	public List<Long> getScheduleNeedTasksForPlan(
+		final TokenMap tokenMap,
+		final NotificationMap notificationMap
 	) {
 
-		final List<NotificationTask> allTasks = tokenMap.keySet().stream()
-			.flatMap(userId -> {
-				final List<String> tokens = tokenMap.get(userId);
-				return tokens.stream()
-					.map(token -> NotificationTask.of(notificationMap.get(userId), token));
-			})
-			.toList();
+		final List<NotificationTask> allTasks = tokenMap.getUserIds().stream()
+						.map(userId -> notificationMap.getNotification(userId)
+								.map(notification -> {
+									return tokenMap.getTokens(userId).stream()
+											.map(token -> {
+												log.info("token: {}", token.firebaseToken());
+												return NotificationTask.of(notification, token);
+											})
+											.collect(Collectors.toList());
+								})
+								.orElseGet(Collections::emptyList)
+						)
+				.flatMap(List::stream)
+				.toList();
+
 
 		allTasks.stream()
 			.filter(NotificationTask::isImmediately)
-			.forEach(this::processingMessageTask);
+			.forEach(this::processingImmediately);
 
 		final List<NotificationTask> scheduleTasks = allTasks.stream()
 			.filter(NotificationTask::isScheduled)
 			.toList();
 
+		log.info("tasks: {}: ", allTasks);
+
 		notificationTaskRepository.saveAll(scheduleTasks);
 
-		return scheduleTasks;
+		return scheduleTasks.stream()
+				.map(NotificationTask::getId)
+				.toList();
 	}
 
+	private void processingImmediately(final NotificationTask entity) {
 
 
+		log.info("notification: {}", entity.getNotification().getTitle());
+		final NotificationDto notificationDto = NotificationMapper.toNotificationDto(entity.getNotification());
+		final Token tokenDto = FirebaseTokenMapper.toTokenDto(entity.getTargetToken());
+		processingImmediately(notificationDto, tokenDto);
+	}
+
+	public void processingImmediately(final NotificationDto notification, final Token token) {
+
+		final MessageBody messageBody = new MessageBody(notification.title(), notification.content(), MessageType.valueOf(notification.msgType()));
+		final Boolean isAllow = userService.getAllowNotificationById(notification.userId());
+		if (!isAllow) {
+			log.info("Not allow Notification userId: {}", notification.userId());
+			return;
+		}
+		try {
+			log.info("token: {}", token);
+			final Message fcmMessage = MessageBuilder.toFirebaseMessage(messageBody, token);
+			firebasePublisher.sendFirebaseMessage(fcmMessage);
+		} catch (FirebaseException e) {
+			firebaseTokenService.invalidFirebaseHandler(token);
+		}
+	}
 
 	@Transactional
-	public void processingMessageTask (NotificationTask task) {
+	public void processingMessageTask(final Long taskId) {
 
-		if(em.contains(task)) task = em.merge(task);
+		final Optional<NotificationTask> optionalTask = notificationTaskRepository.findById(taskId);
+		final NotificationTask task = optionalTask.orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_NOTI_TASK));
 
 		final Long userId =  task.getNotification().getUserId();
 
@@ -91,11 +141,12 @@ public class NotificationTaskService {
 		task.toSENT();
 
 		final MessageBody messageBody = new MessageBody(notification.getTitle(), notification.getContent(), notification.getMsgType());
+		final Token token = FirebaseTokenMapper.toTokenDto(task.getTargetToken());
 		try {
-			final Message fcmMessage = MessageBuilder.toFirebaseMessage(messageBody, task.getTargetToken());
+			final Message fcmMessage = MessageBuilder.toFirebaseMessage(messageBody, token);
 			firebasePublisher.sendFirebaseMessage(fcmMessage);
 		} catch (FirebaseException e) {
-			firebaseTokenService.invalidFirebaseHandler(task.getTargetToken(), userId);
+			firebaseTokenService.invalidFirebaseHandler(token);
 		}
 	}
 
